jwt-external-svc/egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - numbersapi.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-numbersapi
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: numbersapi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-numbesrapi-through-egress-gateway
spec:
  hosts:
  - numbersapi.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: numbersapi
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: numbersapi.com
        port:
          number: 80
      weight: 100
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "egress-gateway-foo"
  namespace: "istio-system"
spec:
  host: "istio-egressgateway.istio-system.svc.cluster.local"
