jwt-external-svc/k8s.yaml
##################################################################################################
# sleep service / curl
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: pstauffer/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sleep
spec:
  hosts:
  - sleep.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: sleep.default.svc.cluster.local
