jwt-external-svc/svc-entry-numbers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: numbers-external
spec:
  hosts:
  - numbersapi.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
